syntax="proto3";

import "google/protobuf/empty.proto";

service AftSI {
    rpc StartTransaction(google.protobuf.Empty) returns (CreateTransactionClient) {}
    rpc Read(ReadRequest) returns (TransactionResponse) {}
    rpc Write(WriteRequest) returns (TransactionResponse) {}
    rpc CommitTransaction(TransactionID) returns (TransactionResponse) {}
    rpc AbortTransaction(TransactionID) returns (TransactionResponse) {}
}

message CreateTxnEntry {
    string tid = 1;
    string txnManagerIP = 2;
    uint32 channelID = 3;
}

message CreateTxnEntryResp {
    TransactionError e = 1;
    uint32 channelID = 2;
}

message CreateTransactionClient {
    string ipAddr = 1;
    TransactionID t = 2;
}

message TransactionID {
    string tid = 1;
    TransactionError e = 2;
}

message TransactionResponse {
    bytes value = 1;
    TransactionError e = 2;
}

enum TransactionError {
    SUCCESS = 0;
    FAILURE = 1;
}

message ReadRequest {
    string tid = 1;
    string key = 2;
}

message WriteRequest {
    string tid = 1;
    string key = 2;
    bytes value = 3;
}
